# graphics_playground

./: Cargo.toml  build.rs  rustfmt.toml
.cargo/: config.toml
parsers/: Cargo.toml
parsers/src/: mtl.rs  obj.rs
src/: app.rs  controls.rs  gpu.rs  image.rs  lib.rs  main.rs  model.rs  scene.rs
src/app/: mod.rs
src/gpu/: bind.rs  buffer.rs  pipeline.rs
src/gpu/bind/: image.rs
src/gpu/pipeline/: image.rs  passthru.rs
src/image/: filters.rs  gpu.rs  render.rs
src/image/gpu/: lanczos.rs  mipmap.rs
src/image/render/: lanczos.rs  mipmap.rs
src/model/: parser.rs
src/shader/: gauss_filter.wesl  image.wesl  image.wgsl  mipmapper.wgsl  passthru.wesl  vert.wgsl  vertex.wesl
src/shader/image/: lanczos.wesl  quad.wesl  render.wesl
src/shader/mipmap/: convolution.wesl  halfing.wesl  interpolate.wesl  texture_copy.wesl
src/shaders/: compile.sh  tutorial.frag  tutorial.vert
src/vulkan_backend/: mod.rs
