[package]
name = "graphics_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cgmath = "0.18.0"
log = "0.4.21"
vulkanalia = { version = "0.25.0", features = [ "libloading", "provisional", "window" ] }
thiserror = "1"
tobj = { version = "3", features = ["log"] }
png = "0.17"
winit = "0.30"
env_logger = "0.11.5"
nom = { version = "7.1.3", features = ["alloc"] }
