[package]
name = "graphics-playground"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["parsers"]

[dependencies]
bytemuck = "1.25.0"
iced = {
  version = "0.14.0",
  # We need to disable web-colors because that breaks iced::Color interpretation, which should
  # be sRBG but is used linearly due to that feature.
  default-features = false,
  features = [
    "advanced",
    "crisp",
    "linux-theme-detection",
    "thread-pool",
    "tiny-skia",
    "wayland",
    "wgpu",
    "x11",
  ]
}
iced_graphics = { version = "0.14.0" }
iced_wgpu = "0.14.0"
iced_widget = { version = "0.14.0", features = ["wgpu"] }
iced_winit = "0.14.0"
image = "0.25.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.20"
# wesl = "0.4.0"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# disable some pedantic lints
cast_lossless = "allow"
# cast_possible_truncation = "allow"
# cast_precision_loss = "allow"
cast_sign_loss = "allow"
enum_glob_use = "allow"
match_bool = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# restriction lints
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
# missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"  # alternative: self_names_module_files
needless_raw_strings = "warn"
pathbuf_init_then_push = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
str_to_string = "warn"
string_slice = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
